Closed Bug 151110 Opened 22 years ago Closed 22 years ago

Cannot enter "international" text with accents or diacriticals in HTML text form fields

Categories

(Camino Graveyard :: General, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: jnp, Assigned: Brade)

References

Details

(Keywords: intl)

Attachments

(1 file, 1 obsolete file)

There seems to be a problem with accents (grave, aigu, umlaut, tilde) what ever
the proper names are.

The problem is the accents, not getting characters withn the option key - it works.


Mac OS X 10.1.5, powerbook G4, keyboard localised for Danish layout.
Here with a Belgian keyboard.
The problem arises when you have to type accented chars with a combination of
two keys : like ê (first type '^' then type 'e').
This only happens in HTML forms (url bar is ok)
http://mozdev.org/bugs/show_bug.cgi?id=1103 is a dupe of this bug.
Revising Summary.
Keywords: intl
Summary: Cannot enter accents (keyboard) → Cannot enter "international" text with accents or diacriticals
-> brade
Assignee: saari → brade
Summary: Cannot enter "international" text with accents or diacriticals → Cannot enter "international" text with accents or diacriticals in HTML text form fields
Also, I am unable to switch to a unicode keyboard (in my case, Hebrew unicode
keyboard) at all. Should I file a separate bug for that?
Go ahead, Shoshannah. Post a note here with that bug number.
comments on patch? review?
Status: NEW → ASSIGNED
Keywords: review
+- (long) conversationIdentifier;

shouldn't this return |self| rather than 12345? The docs say the text view
should return its address unless they share the same text storage, which i don't
think these do...or do they?

+  NSRange tmp;
+  tmp = mMarkedRange;
+  return tmp;

why copy it before returning it, which makes another copy?

should we land the unimplemented stub of the NSTextInput protocol or wait for
its completion before landing? otherwise r=pink.
Blocks: 159869
this was just checked in
Status: ASSIGNED → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Great!

Works fine in the daily/nightly build.


This problem has returned with build 2002091704 (or perhaps before, saw it with
this build)


Tried to enter e.g. ä in Google.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
wfm in  build 2002091904 on osx 10.2.1
Does not work for me. Also on 10.2.1, but the problem was there before in 10.2

Could it have to do with non-US keyboard?

To simplify, I can't enter accents or diacriticals in text fields, like this
field (Additional Comments) on http://bugzilla.mozilla.org/show_bug.cgi?id=151110

Build ID: 200209200
Comment on attachment 100432 [details] [diff] [review]
diff to check length of event characters before creating gecko events

r=sfraser
Attachment #100432 - Flags: review+
fix checked in
Status: REOPENED → RESOLVED
Closed: 22 years ago22 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: