fix bug 151110 (again); pay attention to the length of "characters" for the key events since it can be 0 for dead keys; r=smfr